<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ok"> OK </string>
    <string name="cancel"> Cancel </string>
    <string name="edit"> Edit </string>
    <string name="app_name">WeightWatch</string>
    <string name="update">update</string>
    <string name="profil">Profil</string>
    <string name="info">Info</string>
    <string name="welcome">Welcome</string>
    <string name="permission_not_granted">Permission was not granted</string>
    <string name="menu_delete">Delete Data</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_help">Help</string>
    <string name="menu_option">Option</string>
    <string name="options_notification_title">Notification Settings</string>
    <string name="options_notification_enable">Enable Notifications</string>
    <string name="options_notification_morning">Morning Reminder</string>
    <string name="options_notification_evening">Evening Summary</string>
    <string name="options_notification_blocked">Notifications are blocked for this App by the System.\nPlease enable them in your phone settings.</string>
    <string name="options_other_settings">Other Settings</string>
    <string name="insert_weight_title">Pls insert new weight value!</string>
    <string name="insert_weight_kg">kilo</string>
    <string name="insert_weight_gram">,  gram </string>
    <string name="backup_information_title">Backup succesfull</string>
    <string name="backup_information">The Data was writen int the Application dir/Data.</string>
    <string name="backup_information_fail">The backup failed, pls try again. Check that all needed permissions are given.</string>
    <string name="graph_legend_weight">WEIGHT</string>
    <string name="graph_legend_base_cal">DAILY CAL. BURN</string>
    <string name="graph_title">%1$d day graph View</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="weekplaner_time">time</string>
    <string name="planner_time_date">hh/date</string>
    <string name="planner_legend_1">current hour</string>
    <string name="planner_legend_2">normal cal intake</string>
    <string name="planner_legend_3">high cal intake</string>
    <string name="planner_legend_4">Cal Fast: 16h+"</string>
    <string name="overview_cal_day">Calories day</string>
    <string name="overview_cal_left">Calories left</string>
    <string name="overview_bmi">BMI:</string>
    <string name="overview_weight">Weight:</string>
    <string name="edit_weight">weight</string>
    <string name="edit_meals">meals</string>
    <string name="insert_meal">Please insert your meal and calories:</string>
    <string name="hint_insert_what">Please insert description</string>
    <string name="hint_insert_cal">Please insert cal amount</string>
    <string name="insert_date_format">Date (YYYY-MM-DD)</string>
    <string name="insert_time_format">Time (HH:mm)</string>
    <string name="insert_no_input">Please enter name and calorie</string>
    <string name="createUser_Title">Create new user</string>
    <string name="createUser_name">Please insert Name</string>
    <string name="createUser_weight">Please insert weight in Kg</string>
    <string name="createUser_CalUse">Estimated calories \nneeded per day:</string>
    <string name="createUser_CalTarget"></string>
    <string name="createUser_height">Please insert height in cm</string>
    <string name="createUser_target_weight">Please insert target weight</string>
    <string name="createUser_Age">Please insert Age</string>
    <string name="createUser_Bmi">Your BMI is: </string>
    <string name="createUser_targetBmi">Your BMI at target weight is: </string>
    <string name="createUser_Man">man</string>
    <string name="createUser_female">female</string>
    <string name="createUser_activity_low">low</string>
    <string name="createUser_activity_medium">medium</string>
    <string name="createUser_activity_high">high</string>
    <string name="createUser_activity_label">activity:</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="createUser_toolbar_title">New User</string>
    <string name="createUser_data_use">Insert data are only locally saved. The app needs the data for calculating your daily calorie burn rate. You can change this data later. (Menu -> Profile -> Edit Profile)</string>
    <string name="delet_dialogbox_warning">Are you sure that you want to delete User and all data? Data can not be recovered.\n
    (Backup data wont be deleted and must be deleted from Application folder /Data)</string>
    <string name="delet_dialogbox_title">Delete Data Warning</string>
    <string name="editActivity_toolbarMessage">Edit</string>
    <string name="profilActivity_toolbarMessage">Profil</string>
    <string name="profile_target">Your target is:</string>
    <string name="profile_calroies">Your daily Cal use is:</string>
    <string name="profile_bmi">Your Bmi is:</string>
    <string name="profile_progress_greeting_good">
        Congratulations on your progress!\n\n
    </string>
    <string name="profile_progress_greeting_bad">
        You can do it, don\'t give up!\n\n
    </string>
    <string name="profile_progress_message_weight">
        Your current weight is %1$.1f kg, and since %2$s, you\'ve lost %3$.1f kg.
    </string>
    <string name="profile_progress_message_weight_7days">
        The last 7 days amounted to a weight change of %1$.1f kg.
    </string>
    <string name="profile_progress_message_weight_result_good">
        Weight fluctuations during a diet are normal, but it\'s always encouraging to see some progress.\n\n
    </string>
    <string name="profile_progress_message_weight_result_bad">
        Weight fluctuations during a diet are normal, and it\'s normal to face challenges along the way.\n\n
    </string>
    <string name="profile_progress_message_cal">
        You maintained an average calorie intake of %1$.1f per day, which means you had an average calorie deficit of %2$.1f per day.\n\n
    </string>
    <string name="profile_progress_message_intermittent">
        You\'ve successfully practiced intermittent fasting on %1$d out of the last 7 days.
        Intermittent fasting has been shown to improve metabolism and promote weight loss.
    </string>
    <string name="profile_progress_message_intermittent_bad">
        Intermittent fasting may be difficult but the benefits should outweigh the difficulties, so let\'s do our best.\n\n
    </string>
    <string name="profile_progress_message_intermittent_good">
        Keep up the good work!\n\n
    </string>
    <string name="profile_progress_message_encourage_good">
        Remember, weight loss is a unique journey, and results may vary. Stay consistent, stay positive, and let\'s achieve your health goals
        together!\n\nKeep up the great work, and you\'ll reach your target weight of %1$.1f in around %2$d days!
    </string>
    <string name="profile_progress_message_encourage_bad">
        Remember, weight loss is a unique journey, and results may vary. Stay consistent, stay positive, stay committed to your goals,
        and try implementing intermittent fasting and an calorie deficit in the next 7days. Stay committed to your journey,
        and with time, effort, and our app\'s support, you\'ll achieve your health goals!\n\nKeep up the great work so you can reach
        your weight goal of %1$.1f.
    </string>
    <string name="profile_progress_message_new_user">
        Welcome to our weight and calorie tracker app!\n\nAs a new user, we don\'t have enough data yet to
        provide a further information here. But don\'t worry, you\'re taking the first step towards a healthier lifestyle!\n\nSet your health goals, track your
        weight and calorie intake regularly, and practice intermittent fasting to see positive changes.\n\nRemember, it\'s all about consistency and dedication.
        Stay committed to your journey, and with time, effort, and our app\'s support, you\'ll achieve your health goals!\n\nKeep up the great work, and let\'s
        embark on this transformative journey together!
    </string>
    <string name="info_toolbar_text">Info</string>
    <string name="essay_weight_loss">
        The Key to Effective Weight Loss: Calorie Deficit and the 16+8 Approach\n\nIn today\'s fast-paced world, weight loss has become a prevailing concern for many individuals seeking to improve their health and well-being. While various methods and strategies exist, two crucial aspects stand out as fundamental contributors to successful weight loss: maintaining a calorie deficit and following the 16+8 intermittent fasting approach.\n\n1. Calorie Deficit:\n\na. Energy balance:\nWeight loss occurs when the body\'s energy expenditure surpasses its energy intake. This prompts the body to utilize stored fat as a source of fuel, ultimately leading to weight loss.
        \n\nb. Calorie tracking:\nMonitoring daily caloric intake and expenditure is essential for maintaining a calorie deficit. By accurately assessing the nutritional content of food and tracking physical activity, individuals can make informed decisions to ensure a sustained deficit.\n\nc. Balanced nutrition:\nWhile it\'s crucial to create a calorie deficit, it is equally important to maintain a balanced diet. Prioritizing nutrient-dense foods, including lean proteins, whole grains, fruits, and vegetables, can support overall health and provide essential vitamins and minerals while keeping calorie intake in check.\n\n2. 16+8 Intermittent Fasting:
        \n\na. Enhanced fat burning:\nBy extending the fasting period, the body exhausts its readily available energy from food, prompting the utilization of stored fat for fuel. This promotes fat burning and aids in weight loss.\n\nb. Insulin regulation:\nIntermittent fasting can improve insulin sensitivity, which helps regulate blood sugar levels. This, in turn, reduces the risk of insulin resistance and supports better weight management.\n\nc. Appetite control:\nRestricting the eating window to 8 hours can help regulate hunger hormones and curb excessive snacking. This can result in better portion control, reduced calorie intake, and ultimately contribute to weight loss goals.
        \n\nAchieving sustainable weight loss requires a multifaceted approach that includes creating a calorie deficit and implementing effective strategies. Maintaining a calorie deficit through mindful calorie tracking and a balanced diet is essential for consistent weight loss. Additionally, the 16+8 intermittent fasting approach offers a beneficial framework for enhancing fat burning, regulating insulin levels, and controlling appetite.\n\nIt is important to note that weight loss journeys are individualized, and what works for one person may not work for another. Consulting a healthcare professional or a registered dietitian is recommended to personalize weight loss plans and ensure overall well-being. With dedication, patience, and a holistic approach, achieving and maintaining a healthy weight becomes an attainable goal for everyone.
    </string>
    <string name="help_toolbar_text">Help</string>
    <string name="help_a_title">A. Overview information</string>
    <string name="help_a1_info">Greetings and Username</string>
    <string name="help_a2_info">Four icons to indicate your current BMI, your current weight, your daily calorie burn rate and the max calorie you can still intake today before you gain weight.</string>
    <string name="help_a3_info">Press the X-Button to insert a new weight.</string>
    <string name="help_a4_info">Opens the menu</string>
    <string name="help_b_title">B. Main graph information</string>
</resources>