<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>

    <NumberPicker
        android:id="@+id/createUser_NP_weight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/createUser_TV_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/createUser_NP_height"
        app:layout_constraintTop_toTopOf="@+id/createUser_TV_weight" />

    <NumberPicker
        android:id="@+id/createUser_NP_age"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/createUser_NP_height"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <NumberPicker
        android:id="@+id/createUser_NP_height"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/createUser_TV_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createUser_TV_height"
        app:layout_constraintTop_toTopOf="@+id/createUser_TV_height" />

    <NumberPicker
        android:id="@+id/createUser_NP_target_weight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-12dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintBottom_toBottomOf="@+id/createUser_target_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createUser_target_weight" />

    <EditText
        android:id="@+id/createUser_ET_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/background_round_corner_view"
        android:hint="@string/createUser_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/createUser_Switch_sex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create" />

    <TextView
        android:id="@+id/createUser_TV_weight"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@color/background_round_corner_view"
        android:gravity="center_vertical"
        android:text="@string/createUser_weight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_sex" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/background_round_corner_view"
        android:gravity="center_vertical"
        android:text="@string/createUser_Age"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUser_TV_weight" />

    <Switch
        android:id="@+id/createUser_Switch_sex"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/createUser_Man"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/createUser_ET_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createUser_ET_Name" />

    <TextView
        android:id="@+id/createUser_TV_height"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/background_round_corner_view"
        android:gravity="center_vertical"
        android:text="@string/createUser_height"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <include
        android:id="@+id/include2"
        layout="@layout/user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUser_NP_target_weight"></include>

    <Button
        android:id="@+id/createUser_BT_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/lightblue"
        android:text="@string/ok"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/rg_createuser_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createUser_activity_label"
        app:layout_constraintTop_toBottomOf="@+id/createUser_TV_height">

        <RadioButton
            android:id="@+id/rb_lowactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createUser_activity_low" />

        <RadioButton
            android:id="@+id/rb_activitymedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createUser_activity_medium" />

        <RadioButton
            android:id="@+id/rb_activityhigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createUser_activity_high" />
    </RadioGroup>

    <TextView
        android:id="@+id/createUser_activity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/createUser_activity_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/rg_createuser_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rg_createuser_activity" />

    <TextView
        android:id="@+id/createUser_target_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/boarder_round_corner_view"
        android:text="@string/createUser_target_weight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_createuser_activity" />

    <TextView
        android:id="@+id/tv_create_user_data_use"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/createUser_data_use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUser_ET_Name">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/createUser_Man" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createUser_female" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>