<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dayplanner_legend_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/planner_legend_1"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/dayplanner_legend_icon_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dayplanner_legend_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/planner_legend_2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dayplanner_legend_3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/planner_legend_3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayplanner_legend_2" />

    <TextView
        android:id="@+id/dayplanner_legend_4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/planner_legend_4"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/dayplanner_legend_icon_3"
        app:layout_constraintTop_toBottomOf="@+id/dayplanner_legend_1" />

    <TextView
        android:id="@+id/dayplanner_legend_icon_2"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/black_boarder_green_background"
        app:layout_constraintBottom_toBottomOf="@+id/dayplanner_legend_2"
        app:layout_constraintEnd_toStartOf="@+id/dayplanner_legend_2"
        app:layout_constraintTop_toTopOf="@+id/dayplanner_legend_2" />

    <TextView
        android:id="@+id/dayplanner_legend_icon_3"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/black_boarder_red_background"
        app:layout_constraintBottom_toBottomOf="@+id/dayplanner_legend_3"
        app:layout_constraintEnd_toStartOf="@+id/dayplanner_legend_3"
        app:layout_constraintTop_toTopOf="@+id/dayplanner_legend_3" />

    <TextView
        android:id="@+id/dayplanner_legend_icon_1"
        android:layout_width="10dp"
        android:layout_height="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/black_boarder_blue_background"
        app:layout_constraintBottom_toBottomOf="@+id/dayplanner_legend_1"
        app:layout_constraintEnd_toStartOf="@+id/dayplanner_legend_1"
        app:layout_constraintTop_toTopOf="@+id/dayplanner_legend_1" />

    <TextView
        android:id="@+id/dayplanner_legend_icon_4"
        android:layout_width="10dp"
        android:layout_height="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/black_boarder_yellow_background"
        app:layout_constraintBottom_toBottomOf="@+id/dayplanner_legend_4"
        app:layout_constraintEnd_toStartOf="@+id/dayplanner_legend_4"
        app:layout_constraintTop_toTopOf="@+id/dayplanner_legend_4" />

</androidx.constraintlayout.widget.ConstraintLayout>